# aeros

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
aeros/: __init__.py  aero.py  atmosphere.py  cad.py  cli.py  cost.py  design.py  engines.py  fastopt.py  materials.py  plots.py  structures.py  trajectory.py  uncertainty.py  validate.py  vehicle.py
docs/: results_gap346.json  space_problem_intelligence_2026.md  validation_results.json
examples/: design_demo.py
tests/: test_atmosphere.py  test_cad.py  test_cost.py  test_engines.py  test_fastopt.py  test_structures.py  test_trajectory.py  test_uncertainty.py  test_vehicle.py
